# cop3014-grid-exercises

./: .gitignore  CMakeLists.txt
app/: ex1.cpp  ex2.cpp  ex3.cpp
resources/: grid1.in
